--- a/src/components/Pages/blogFolder/blogs/blogPost.css
+++ b/src/components/Pages/blogFolder/blogs/blogPost.css
@@ -15,6 +15,7 @@ body {
     padding: 20px;
     background-color: #fff;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    margin-bottom: 60;
 }
 
 h1, h2 {
